--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "rss-parser": "^2.10.1"
+    "rss-parser": "^2.10.1",
+    "actions-on-google": "^1.0.9"
   },
   "repository": {
     "type": "git",
